--- a/.github/workflows/dbt_run.yml
+++ b/.github/workflows/dbt_run.yml
@@ -17,8 +17,8 @@ DBT_SNOWFLAKE_PW: ${{ secrets.DBT_SNOWFLAKE_PW }}
 DBT_SNOWFLAKE_ROLE: ${{ secrets.DBT_SNOWFLAKE_ROLE }}
 
 jobs:
-schedule_dbt_job:
-    name: schedule_dbt_job
+dbt_run:
+    name: dbt_run
     runs-on: ubuntu-latest
 
     - uses: actions/setup-python@v1
