--- a/.github/workflows/schedule_dbt_job.yml
+++ b/.github/workflows/schedule_dbt_job.yml
@@ -22,6 +22,17 @@ schedule_dbt_job:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Check out
+        uses: actions/checkout@main
+
+    - uses: actions/setup-python@v1
+        with:
+        python-version: "3.7.x"
+
+    - name: Install dependencies
+        run: |
+        pip install dbt
+        dbt deps
 
     # dbt related commands here - run use --target prod/dev to run for specific environments
     - name: Run dbt models
