--- a/.github/workflows/schedule_dbt_job.yml
+++ b/.github/workflows/schedule_dbt_job.yml
@@ -23,9 +23,7 @@ schedule_dbt_job:
 
     steps:
     - name: Check out
-        uses: actions/checkout@main
-
-    - uses: actions/setup-python@v1
+      uses: actions/setup-python@v1
         with:
         python-version: "3.7.x"
 
