--- a/.github/workflows/schedule_dbt_job.yml
+++ b/.github/workflows/schedule_dbt_job.yml
@@ -22,19 +22,21 @@ schedule_dbt_job:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out
-      uses: actions/setup-python@v1
+      - name: Check out
+        uses: actions/checkout@main
+
+      - uses: actions/setup-python@v1
         with:
-        python-version: "3.7.x"
+          python-version: "3.7.x"
 
-    - name: Install dependencies
+      - name: Install dependencies
         run: |
-        pip install dbt
-        dbt deps
-
-    # dbt related commands here - run use --target prod/dev to run for specific environments
-    - name: Run dbt models
+          pip install dbt
+          dbt deps --target prod
+      
+      # Add dbt seed or other commands here if needed
+      - name: Run dbt models
         run: dbt run
 
-    - name: Test dbt models
+      - name: Test dbt models
         run: dbt test
