--- a/.github/workflows/schedule_dbt_job.yml
+++ b/.github/workflows/schedule_dbt_job.yml
@@ -1,10 +1,6 @@
 name: schedule_dbt_job
 
-on:
-push:
-    branches:
-    # run on push to development branch
-    - main
+on:push
 env:
 DBT_PROFILES_DIR: ./
 
