--- a/.github/workflows/schedule_dbt_job.yml
+++ b/.github/workflows/schedule_dbt_job.yml
@@ -8,9 +8,9 @@ on:
 env:
   DBT_PROFILES_DIR: ./
 
-DBT_SNOWFLAKE_USERNAME: "NROY"
-DBT_SNOWFLAKE_PW: "Pass1234"
-DBT_SNOWFLAKE_ROLE: "SYSADMIN"
+DBT_SNOWFLAKE_USERNAME: ${{ secrets.DBT_SNOWFLAKE_USERNAME }}
+DBT_SNOWFLAKE_PW: ${{ secrets.DBT_SNOWFLAKE_PW }}
+DBT_SNOWFLAKE_ROLE: ${{ secrets.DBT_SNOWFLAKE_ROLE }}
 
 jobs:
   schedule_dbt_job:
