--- a/.github/workflows/schedule_dbt_job.yml
+++ b/.github/workflows/schedule_dbt_job.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install dbt
+          pip install dbt-core
           pip install dbt-snowflake
           dbt deps --target prod
       
